<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita_bold"
        android:text="Hello World!"
        android:textColor="#310E6D"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/surprise"
        android:textColor="#310E6D"
        android:textSize="55sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/button"
        android:textColor="@color/black"
        tools:text="Red_Button" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:background="#310E6D"
        android:clickable="false"
        android:text="@string/togglebutton"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FDD835"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="48sp"
        tools:text="DON'T PUSH" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:checked="false"
        android:fontFamily="@font/amita_bold"
        android:showText="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/switch_1"
        android:textSize="34sp"
        tools:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:clickable="true"
        android:contentDescription="@string/test"
        android:fontFamily="@font/aref_ruqaa_bold"
        android:text="@string/yes"
        android:textColor="#00897B"
        android:textSize="20sp"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/input_your_gender"
            android:textColor="#310E6D"
            android:textColorHint="#310E6D"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
